src/objects/Wish_Expense__c.object
<CustomObject>
    <description>This object will be used to store budgeting information</description>
    <fields>
        <fullName>Account_Description__c</fullName>
        <description>It will capture detail description of the account</description>
        <label>Account Description</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Wish Cash Expense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Wish In-Kind Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Wish In-kind Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>It will capture Account Number information</description>
        <label>Account Number</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Cash__c</fullName>
        <description>It will capture the  Actual Cash information</description>
        <label>Actual Cash</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_In_Kind__c</fullName>
        <description>It will capture the Actual In Kind information</description>
        <label>Actual In Kind</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Approval_Status__c</fullName>
        <label>Budget Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_Cash__c</fullName>
        <description>It will capture the $ of Budget Cash information</description>
        <label>Budget Cash</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_In_Kind__c</fullName>
        <description>It will capture the $ of Budget In Kind information</description>
        <label>Budget In Kind</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Total__c</fullName>
        <formula>Budget_Cash__c +  Budget_In_Kind__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>It will look up to the case record</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Wish Expenses</relationshipLabel>
        <relationshipName>Wish_Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Chapter_From__c</fullName>
        <description>It will capture starting place of source information</description>
        <label>Chapter From</label>
        <picklist>
            <picklistValues>
                <fullName>New York</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chicago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los Angeles</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Chapter_To__c</fullName>
        <description>It will capture place of destination information</description>
        <label>Chapter To</label>
        <picklist>
            <picklistValues>
                <fullName>New York</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chicago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los Angeles</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department_Division__c</fullName>
        <label>Department/Division</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense__c</fullName>
        <description>It holds the expense</description>
        <label>Expense</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FE_Posted_Cash__c</fullName>
        <description>It will capture the FE Posted Cash information</description>
        <label>FE Posted Cash</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FE_Posted_In_Kind__c</fullName>
        <description>It will capture the FE Posted In Kind information</description>
        <label>FE Posted In Kind</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <label>Import ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Journal_Reference__c</fullName>
        <description>It will capture information about the Journal Reference</description>
        <label>Journal Reference</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RE Migrated Records</description>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_Date__c</fullName>
        <description>It will be used to store post date value</description>
        <label>Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Projected_Approval_Status__c</fullName>
        <label>Projected Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Projected_Cash__c</fullName>
        <description>It will capture the  Projected Cash</description>
        <label>Projected Cash</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_In_Kind__c</fullName>
        <description>It will capture the Projected budget amount of In Kind</description>
        <label>Projected In Kind</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RE_Account_Description__c</fullName>
        <description>Account Description</description>
        <label>RE Account Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Account_number__c</fullName>
        <description>Account Number</description>
        <label>RE Account number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Actual_Cash__c</fullName>
        <label>RE Actual Cash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Actual_In_Kind__c</fullName>
        <label>RE Actual In-Kind</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Budget_Approval_Status__c</fullName>
        <label>RE Budget Approval Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Budget_Cash__c</fullName>
        <label>RE Budget Cash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Budget_In_Kind__c</fullName>
        <description>In-Kind Amount</description>
        <label>RE Budget In Kind</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Case__c</fullName>
        <label>RE Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Created_By__c</fullName>
        <label>RE Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Department_Division__c</fullName>
        <label>RE Department/Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_FE_Posted_Cash__c</fullName>
        <label>RE FE Posted Cash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_FE_Posted_In_Kind__c</fullName>
        <label>RE FE Posted In Kind</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Import_Id__c</fullName>
        <description>ID, ImportID</description>
        <label>RE Import Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Journal_Reference__c</fullName>
        <description>Journal Entry</description>
        <label>RE Journal Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Owner__c</fullName>
        <label>RE Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Post_Date__c</fullName>
        <description>Post Date</description>
        <label>RE Post Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Projected_Cash__c</fullName>
        <description>Cash Amount</description>
        <label>RE Projected Cash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Projected_In_Kind__c</fullName>
        <description>In-Kind Amount</description>
        <label>RE Projected In Kind</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Transaction_Types__c</fullName>
        <label>RE Transaction Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Transaction__c</fullName>
        <description>Transation Number</description>
        <label>RE Transaction #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Wish_Expense_Approval_Status__c</fullName>
        <label>RE Wish Expense Approval Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Wish_Expense_Number__c</fullName>
        <label>RE Wish Expense Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Wish_Expense_Transaction_Code__c</fullName>
        <description>Expense Type</description>
        <label>RE Wish Expense Transaction Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Types__c</fullName>
        <label>Transaction Types</label>
        <picklist>
            <picklistValues>
                <fullName>Budgeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <description>It will capture transaction  information</description>
        <externalId>true</externalId>
        <label>Transaction #</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Wish_Expense_Approval_Status__c</fullName>
        <label>Wish Expense Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wish_Expense_Transaction_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wish Expense Transaction Code</label>
        <referenceTo>Wish_Expense_Transaction_Code__c</referenceTo>
        <relationshipLabel>Wish Expenses</relationshipLabel>
        <relationshipName>Wish_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wish_Expense_Type__c</fullName>
        <description>This field will be used to select the wish expense type</description>
        <label>Wish Expense Type</label>
        <picklist>
            <picklistValues>
                <fullName>Airfare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Wish Expense</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Wish_Expense_Transaction_Code__c</columns>
        <columns>Case__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Migration</fullName>
        <columns>NAME</columns>
        <columns>Account_Number__c</columns>
        <columns>Case__c</columns>
        <columns>FE_Posted_Cash__c</columns>
        <columns>FE_Posted_In_Kind__c</columns>
        <columns>Post_Date__c</columns>
        <columns>Wish_Expense_Transaction_Code__c</columns>
        <columns>Wish_Expense_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>iuser</value>
        </filters>
        <label>Migration</label>
    </listViews>
    <nameField>
        <displayFormat>WE-{00000}</displayFormat>
        <label>Wish Expense Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wish Expenses</pluralLabel>
    <recordTypes>
        <fullName>Budgeting</fullName>
        <active>true</active>
        <label>Budgeting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Finance</fullName>
        <active>true</active>
        <label>Finance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wish_Expense_Record_Type</fullName>
        <active>true</active>
        <label>Wish Expense Record Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>WE_Do_not_update_case</fullName>
        <active>true</active>
        <description>Once wish expense record created, it should not be editable.</description>
        <errorConditionFormula>IsChanged(Case__c)</errorConditionFormula>
        <errorMessage>Wish Number cannot be updated.</errorMessage>
    </validationRules>
</CustomObject>